fix(deploy): risolto ModuleNotFoundError su Render
- Aggiunto file wsgi.py per configurazione WSGI corretta
- Aggiornato Procfile per usare wsgi:application
- Aggiornato render.yaml per coerenza configurazione
- Risolve errore 'No module named your_application'

--- a/render.yaml
+++ b/render.yaml
@@ -20,7 +20,7 @@ services:
       pip install -r requirements.txt
     
     # Comando per avviare l'app
-    startCommand: gunicorn --bind 0.0.0.0:$PORT web_finale:app
+    startCommand: gunicorn --bind 0.0.0.0:$PORT wsgi:application
     
     # Configurazione ambiente
     envVars:
