🔧 Fix Playwright su Render - aggiunto supporto cloud
- Modificato render.yaml: playwright install --with-deps chromium
- Aggiunto argomenti browser per ambienti cloud (--no-sandbox, etc.)
- Aggiornati tutti i file Playwright: rna_deminimis_playwright.py, cribis_playwright_base.py, cribis_nuova_ricerca.py
- Documentazione aggiornata in DEPLOY_RENDER.md

--- a/render.yaml
+++ b/render.yaml
@@ -18,8 +18,7 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-      playwright install chromium
-      playwright install-deps
+      playwright install --with-deps chromium
     
     # Comando per avviare l'app
     startCommand: gunicorn --bind 0.0.0.0:$PORT wsgi:application
