--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-      playwright install --with-deps chromium
+      playwright install chromium
     
     # Comando per avviare l'app
     startCommand: gunicorn --bind 0.0.0.0:$PORT wsgi:application
