--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,7 @@ services:
       playwright install chromium
     
     # Comando per avviare l'app
-    startCommand: gunicorn --bind 0.0.0.0:$PORT wsgi:application
+    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 2 --worker-class sync --timeout 120 wsgi:application
     
     # Configurazione ambiente
     envVars:
