--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ playwright>=1.40.0
 pytesseract>=0.3.10
 Pillow>=10.0.0
 
+# Dipendenze per lettura PDF
+pdfplumber>=0.10.0
+
 # Dipendenze per analisi dati
 pandas>=2.0.0
 numpy>=1.24.0
