Fix: Revert Playwright a v1.55.0 (Docker image v1.56.0 non ancora disponibile)
- Tornato a v1.55.0 nel Dockerfile (immagine disponibile)
- Fissato playwright==1.55.0 in requirements.txt per evitare auto-upgrade
- Docker image v1.56.0-jammy non è stata ancora pubblicata da Microsoft
- Risolve: 'mcr.microsoft.com/playwright/python:v1.56.0-jammy: not found'

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ Flask>=2.3.0
 Flask-CORS>=4.0.0
 
 # Dipendenze per automazione browser (opzionale per produzione)
-playwright>=1.40.0
+# NOTA: Versione fissata a 1.55.0 per allineamento con Docker image disponibile
+playwright==1.55.0
 
 # Dipendenze per OCR (opzionale)
 pytesseract>=0.3.10
